# boardgame_agent

./: ARCHITECTURE.md  README.md  pyproject.toml
boardgame_agent/: app.py  config.py
boardgame_agent/agent/: graph.py  planner.py  prompts.py  schemas.py  state.py
boardgame_agent/agent/tools/: __init__.py  glossary.py  page_vision.py  submit_answer.py  web_search.py
boardgame_agent/glossary/: __init__.py  builder.py  image_utils.py  models.py
boardgame_agent/rag/: extractor.py  indexer.py  retriever.py
boardgame_agent/ui/: sidebar.py
